# ChangeLog for dev-tex/luatex
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tex/luatex/ChangeLog,v 1.130 2013/03/31 11:17:48 ago Exp $

  31 Mar 2013; Agostino Sarubbo <ago@gentoo.org> luatex-0.70.1-r2.ebuild:
  Stable for sh, wrt bug #459866

  23 Mar 2013; Agostino Sarubbo <ago@gentoo.org> luatex-0.70.1-r2.ebuild:
  Stable for ppc64, wrt bug #459866

  22 Mar 2013; Agostino Sarubbo <ago@gentoo.org> luatex-0.70.1-r2.ebuild:
  Stable for ppc, wrt bug #459866

  21 Mar 2013; Jeroen Roovers <jer@gentoo.org> luatex-0.70.1-r2.ebuild:
  Stable for HPPA (bug #459866).

  17 Mar 2013; Agostino Sarubbo <ago@gentoo.org> luatex-0.70.1-r2.ebuild:
  Stable for sparc, wrt bug #459866

  17 Mar 2013; Agostino Sarubbo <ago@gentoo.org> luatex-0.70.1-r2.ebuild:
  Stable for arm, wrt bug #459866

  17 Mar 2013; Agostino Sarubbo <ago@gentoo.org> luatex-0.70.1-r2.ebuild:
  Stable for x86, wrt bug #459866

  17 Mar 2013; Agostino Sarubbo <ago@gentoo.org> luatex-0.70.1-r2.ebuild:
  Stable for amd64, wrt bug #459866

  17 Mar 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  luatex-0.70.1-r2.ebuild:
  Add poppler subslot dependency

  10 Mar 2013; Ulrich Müller <ulm@gentoo.org> files/poppler022.patch:
  Fix broken poppler022.patch by removing the hunk with svn ids, bug 461262.

*luatex-0.70.1-r2 (10 Mar 2013)

  10 Mar 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  +files/poppler022.patch, +luatex-0.70.1-r2.ebuild:
  Add experimental poppler-0.22 patch

  09 Mar 2013; Andreas K. Huettel <dilfridge@gentoo.org> luatex-0.70.1.ebuild,
  luatex-0.70.1-r1.ebuild:
  Explicitly request poppler <0.22

  24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> luatex-0.70.1-r1.ebuild:
  Stable for sh, wrt bug #452018

  20 Feb 2013; Agostino Sarubbo <ago@gentoo.org> luatex-0.70.1-r1.ebuild:
  Stable for s390, wrt bug #452018

  22 Jan 2013; Jeroen Roovers <jer@gentoo.org> luatex-0.70.1-r1.ebuild:
  Stable for HPPA (bug #452018).
