@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX includes.patch 923 SHA256 24093a082fe4040cb858ee8a742bebc61287b15d467093a0309d30be9708dd64 SHA512 e1f45331e341130d74c5327e67fb8ec34741fc5edeca94dbc1a2d034e9362ce933294c80538db0f89030f293b157f7626f9c90b27cb72b9a85c7d9dbe6bac287 WHIRLPOOL 7799d913ad20eb25b02a3865b334e65842d2fdf49a7d8e208173e4cfa11b7f9eae9be407eb88ec893ade8da24bf9b4e74adc726a4f47d82cde436a7836c45f7f
 AUX kpathsea2012.patch 944 SHA256 afb87b3c1cb9317666a7f45b6ecd6ad1078896d56b91fca7bfe6aa1c75ada495 SHA512 d72bce55c2494622fd15703f483c058245c96c8b2aa03d6fa02b112be827ddfe8a0013ee0c3710bb3e1313b631bf436f70ce99d383f11f4d2b51915752c59960 WHIRLPOOL 39c93138b416d79a55d1e5a464afe8363c9902abff50397d88bad623ec298e970490fd93dd8ed4d4c1a8e9788da300f265da550bf2ab6149b41351027998b107
@@ -13,24 +13,25 @@ DIST luatex-beta-0.74.0-doc.tar.bz2 990978 SHA256 e77aeb3dc7bc00cac080c483f0e993
 DIST luatex-beta-0.74.0-source.tar.bz2 10852125 SHA256 e8125e4f5d7ad90422a1c9e952a2f1c37daff485a4c40ade343a4011d872680e SHA512 e515347576d4385e3e42729e87370637786f77d5eaabe9aa92cf4ce291dda94908201864695d593ba29e349911c9e79967a768c32da14fca72c38b000689eb81 WHIRLPOOL 7cf3e3e5caa14f552b4102dfe5182ea77a7298154288a2fcd22501a4249e1e8b939eab1f1b6cb57bdce78903f976b0c09dd36b5c58e2611e76272118a19bbac5
 EBUILD luatex-0.70.1-r1.ebuild 3705 SHA256 03cbd6c7d4afdff9a8ea08fbbee98445701a0db5f7917dd21ac1946b7fb1bff4 SHA512 0099c94f1a8db3ecad938ab2a8bcdd2176a2a3613dc8543a50e71a5ce75a50dcf0a65ce27d9887048e8acdb76f31b7e2b87d230259c734f81bb885831bce83a3 WHIRLPOOL a53f713bfab6e7a9b8254bc2fb17f4e081592f6ec1fb477b26862d677666700077673f6146b318f9854994c706516b9d95eabda19147874012703db27f20b41a
 EBUILD luatex-0.70.1-r2.ebuild 3782 SHA256 11f8509b98514028acc29562a85f12a7e6d8bedbfd3dcde8036d0c52978c3127 SHA512 6490b5e3e10634249931321810972c442df68b686cb744acebc97572479157ab53750ae61e558f481789c6d8e145ee4a93d6f91e1ceb487eb6110a4817ab2036 WHIRLPOOL da4e0cb281101411798287b0e51c9fce12037779b21564b11d2d49003b8cb39acb5ff76ee2da33d2a193dc26e9d2a256cabedf37426b1cbaed924927b1ef22c5
-EBUILD luatex-0.70.1.ebuild 3966 SHA256 674775f793ea19835793b0ac42091e9596025561a8c9554f8bdb61db8e195b7a SHA512 fc90683e04073b20b7433244b8f3154cfc1ff7586d2c3657708e0e57284851a7a48bd7add2062a4b22fe2760bbe2b8dab496748a4ea479543cf87eba96052487 WHIRLPOOL b15f53276a60add449297ce9b64e8048fc919d8f1e27fbd6c8da596969cc389369ce50f887b569151e929bfbb150ba880debd2f86b3328b515fd96463e906197
-EBUILD luatex-0.74.0.ebuild 3089 SHA256 4142210d1218050e126c0c07e458eddae505dd7545b8cc2f49a70c72d4f83167 SHA512 5dfcf55516f0443df278095e36b8f918f0410e83fe30b88e6d99416f50fc213f904e5871336785aeb04a947b1011ead0fb3d29fee7f80023352834f1caf31196 WHIRLPOOL f4eda2133561db359958656134ffa6ebe8c533a61aba8eaff33c38d7669a70dc244b70596ffbbc5c8ce386a1a09d7523c8ca84c74b304b0f3f00d9f5c87bf661
-MISC ChangeLog 16355 SHA256 1856c807d39bc8df445cd3b058b20c672a6dc3d9f8717c84728cc74ff390ff24 SHA512 bb7fe21aaa2e13fe7f06a86ef09a2a88f97bcca1b130ae1b496b6146b4690513f50c48fa41d3e2159d583e86a3b4f6777d9cdaea9df40ccf3230e0551eb209d9 WHIRLPOOL 7f8c86c8a62a91d88d0918b5aa91f6bab7b0a07c0aa48b5b92868f6fde45099c104da1abfc19576fb01670447cb98f52556830a499f33fa4b620288810e5299b
+EBUILD luatex-0.74.0.ebuild 3080 SHA256 f58d2e283676273ec2d591e752117a0d13dca85c206e8bb7a0c70266ca3ece3f SHA512 0c315643a060dbcf5e263c2610c9ef6cfe3eadca26e3e21479d23daa5fb05927195847426db6fedc25a01223fc5912bd088e563627dccdc6e9914b948ce956bf WHIRLPOOL c63997a3e7bd619e8b9fa3d8f3314bdfa2c650a51b0b3a1d6f89f570a956d34371d88723a2078ff4645486a637b48cfbd5338373011062853006dce284c5b2bc
+MISC ChangeLog 16518 SHA256 3420c79b429b7298ef593eab4f9ff306f771ffac2888d1e88b098a6fa85e1cd9 SHA512 5992a25c44e3c30367720e954dde31f765dd62468180a261fe0ed7b0600d6b8024ffab2605c3116a9f0143874a3adc32b88e203461d4a3e66c881ca0e1db79f2 WHIRLPOOL c1af78dd67c88f4f0b055d2bf49cd1fa6d2044cf078ba2b63c6499aeab020c961de370fd930c326787c0a3ff34e78e67d3bd55b69c47e23150dae58e638bbd56
 MISC metadata.xml 336 SHA256 126018a4822f911e52afe63656a10f2a7b0b938ea106f2a2caef00bdc18a845f SHA512 d998dbfe23cbb7f60db7b876e8ac3d039281ad9568aeb45a494774eb65468392523cdfc1b5cc8b621fc9a2f2f7f33dc3e351d1cf902f9ecf3f122534ef4767e0 WHIRLPOOL 3350c9964adc178cb58ee77019669fa51899cd71734ae1ff8f4646d1f9e141973c9f686f43e5995f1a7258d92bd173176dc0d9c3d8bcc09b96c37a0b7a0fb4a2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRWBrIAAoJELp701BxlEWfC40P/0VeMCn7pct1eeZfdHCcx+9g
-NaL0cu5vIBmpabnRKTq8Zdb4zzFQviSJB/SwREyTvLguUd4QkNDedNgpVQAHbwON
-AEqjm9EMKi91h98dRwnsLwyRFIr6bzp8R2w3pZqSkckIbWDMz8iQ1sHjDU8xDJ4d
-Jej9calUXeuMEAERlKHljN6O+WVz5cnYVF5UnBQ/jQqwznyGn9blbB8d8zU7U2wt
-cWoiyVqRlCKaks2eNcsZv8LWyVCPNY2EerWFGEFSqStoxmKxMS5tVRmRnBF4fxqp
-0vs/ZjfPvSCOrCBJvTaQ/mjI5YTan5unuJD0E1vBx/N9AaxXTbU3ihxWmndnX8vf
-QPe+gQlCUS7oGpZ3dfk/4ON5UptuF+dO2Es5bU/LaVAG0hUdTep3HUE0WuJAZ4u4
-Iww6+yl1Ekl+44TMqnVvGuM6o/HKxZvHtmyXheQCPftr4P9Cf64mkNXB9tcDkogz
-NHlQVu73Dad4b/fNe9P0RTFPzd5ogwaPZZgcuNkHvMQT4Dyu8N4Cp+p7wKyVfLdf
-cjShRDfv4vE1MxBo8o0Gu2GOn1XzZ1xPXec2OVNrBM/MIeBeeIM+v9+GJgIsK6Au
-QuR7EOjGiY8JF3NdXDQuiv6CSOFPZecj8kiConWAbjvMEmV50SvBZYFzgGbamdmk
-5jQsLnMNWz1WqywwALcE
-=Ei1S
+iQJ8BAEBCABmBQJRas2IXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
+QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOcgwMQAOPwnWDVtOV+tdvIznDAnxpY
+04hyVA5mU1pgzYG65yiCW8BTyKKjft6jkV5SXAMkW2DeSd+vb+IUxvB7qD+7+ahx
+bHS2c3rsLluw633F6e1zvuQQ2IQwotS+wiAA/m1ZXxYk/gUwZ8jWskwJTVIpMH9n
+cCU67kcBUZ6QOybHTA7Y3y1wVjVEsiOxBdfBvmo96FLl9tM9yh4S9BLlfOOlnMil
+9biEjXEn5A1ctvMTZbgmbAaeMrCor7QeJdXzR30H34fQhPMgGGRXv4jif5FR/s0h
+OLZjFTU38AmwxKxX1UX3O7I+FPg4u4hDmNhKtGe4rUn1H/d6pbemUCF94ucIoZKU
+oVd9bs5DXA1+UBfGx8tboDXTaSDq/SwpzFvLTZZ1E205e1KiAV/xb3LHIng7TvaS
+gI/Ei6JaaK7zEBvGJ0sFvfZC6NUXYo2LknvtYh00df4lUhJOd9KReHHBYpEIwyvg
+ziyoV9bQLkjhwZgUi+CT0SyhT8rH1r7/y+wKgZIvCGf1QCeoZODnRhHf4qpdZLvT
+oiPDLqtDv4h8c8ZKU38/0h55ERgG+FibORcpzViC4y6BjNI7XRttT2HjGJvwHgrQ
+XP665dQmLWygbUHYgQJPwUCqUluouS1A1sOGBfzVQm+MXgFQmW2ll7lCGONEwhKU
+C4wi4xWJebMMFcnuQ17u
+=bxBi
 -----END PGP SIGNATURE-----
