@@ -1,6 +1,10 @@
 # ChangeLog for dev-tex/luatex
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/luatex/ChangeLog,v 1.130 2013/03/31 11:17:48 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/luatex/ChangeLog,v 1.131 2013/04/14 15:37:36 dilfridge Exp $
+
+  14 Apr 2013; Andreas K. Huettel <dilfridge@gentoo.org> -luatex-0.70.1.ebuild,
+  luatex-0.74.0.ebuild:
+  EAPI=5 and poppler subslot dependency; remove old
 
   31 Mar 2013; Agostino Sarubbo <ago@gentoo.org> luatex-0.70.1-r2.ebuild:
   Stable for sh, wrt bug #459866
